[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "general_utils"
authors = [{ name = "Saugat Kandel" }]
description = "Some general utilities"
readme = "README.md"
#license = {file = "LICENSE.txt"}
#requires-python = ">=3.11"
#classifiers = [
#    "Development Status :: 2 - Pre-Alpha"
#]

dependencies = ["numpy", "matplotlib"]

# the dynamically determined project metadata attributes
dynamic = ["version"]


# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"
